--- a/notebook/Tensorflow_practice.ipynb
+++ b/notebook/Tensorflow_practice.ipynb
@@ -177,6 +177,14 @@
     "with tf.Session() as sess:\n",
     "    print(sess.run(output, feed_dict={input1:[7.], input2:[2.]}))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Activation Function\n",
+    "Activation Function is the function applied in the linear function such as relu, sigmod and tanh. These functions make a linear function nonlinear. The less hidden layer in the network are, the suitable an activation function is to be used."
+   ]
   }
  ],
  "metadata": {
