Fix the newly assign categories part

--- a/Benchmark/KDD99_benchmark.ipynb
+++ b/Benchmark/KDD99_benchmark.ipynb
@@ -18,28 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting scikit-learn\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/aa/7d/6c71c35c201f6d5cec318c7ed7841317adbf291513742865ed8904ae4ea9/scikit_learn-0.21.2-cp37-cp37m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (10.5MB)\n",
-      "\u001b[K     |████████████████████████████████| 10.5MB 6.2MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting scipy>=0.17.0 (from scikit-learn)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/04/66/ec5f1283d6a290a9153881a896837487338c44639c1305cc59e1c7b69cc9/scipy-1.3.0-cp37-cp37m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (27.7MB)\n",
-      "\u001b[K     |████████████████████████████████| 27.7MB 48.2MB/s eta 0:00:01\n",
-      "\u001b[?25hCollecting joblib>=0.11 (from scikit-learn)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cd/c1/50a758e8247561e58cb87305b1e90b171b8c767b15b12a1734001f41d356/joblib-0.13.2-py2.py3-none-any.whl (278kB)\n",
-      "\u001b[K     |████████████████████████████████| 286kB 34.3MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: numpy>=1.11.0 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from scikit-learn) (1.16.4)\n",
-      "Installing collected packages: scipy, joblib, scikit-learn\n",
-      "Successfully installed joblib-0.13.2 scikit-learn-0.21.2 scipy-1.3.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#! pip3 install numpy\n",
     "#! pip3 install pandas\n",
@@ -56,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,22 +57,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3057: DtypeWarning: Columns (15,16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(4898431, 42)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_path = \"../Dataset/kddcup.data.txt\"\n",
+    "data_path = \"../../../Dataset/kddcup.data.txt\"\n",
     "\n",
     "dataset = pd.read_csv(data_path, sep=',', header=None, usecols=range(0, 42))\n",
     "\n",
@@ -107,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1743,7 @@
        "[4898431 rows x 42 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1785,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1783,7 @@
        "(3918744, 41)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1804,142 +1793,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Categorize the attack type into two classes: normal and abnormal. Here, we only detect the malicious network traffic. The pre-defined array of new class is ready for the replacement. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_class = {'back.':'abnormal', 'buffer_overflow.':'abnormal', 'ftp_write.':'abnormal', 'guess_passwd.':'abnormal', 'imap.':'abnormal',\n",
+    "            'ipsweep.':'abnormal', 'land.':'abnormal', 'loadmodule.':'abnormal', 'multihop.':'abnormal', 'neptune.':'abnormal', 'nmap.':'abnormal',\n",
+    "            'perl.':'abnormal', 'phf.':'abnormal', 'pod.':'abnormal', 'portsweep.':'abnormal', 'rootkit.':'abnormal', 'satan.':'abnormal',\n",
+    "            'smurf.':'abnormal', 'spy.':'abnormal', 'teardrop.':'abnormal', 'warezclient.':'abnormal', 'warezmaster.':'abnormal', '0.00':'abnormal',\n",
+    "            'normal.':'normal'}\n",
+    "train_y = train_y.replace(new_class)\n",
+    "test_y = test_y.replace(new_class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1809341      smurf.\n",
-       "3563864    neptune.\n",
-       "2992676      smurf.\n",
-       "2333965      smurf.\n",
-       "1882045      smurf.\n",
-       "3181076      smurf.\n",
-       "4697502    neptune.\n",
-       "4552438     normal.\n",
-       "2017195      smurf.\n",
-       "1311800      smurf.\n",
-       "619775     neptune.\n",
-       "2893685      smurf.\n",
-       "590285     neptune.\n",
-       "1874554      smurf.\n",
-       "1817132      smurf.\n",
-       "1289225      smurf.\n",
-       "562422     neptune.\n",
-       "3734009    neptune.\n",
-       "2559288      smurf.\n",
-       "4094193      smurf.\n",
-       "4647141    neptune.\n",
-       "597117     neptune.\n",
-       "1036541     normal.\n",
-       "744279      normal.\n",
-       "1112802    neptune.\n",
-       "1919355      smurf.\n",
-       "1812064      smurf.\n",
-       "2707596      smurf.\n",
-       "3652753    neptune.\n",
-       "486530       smurf.\n",
+       "1819665    abnormal\n",
+       "1639904    abnormal\n",
+       "635867     abnormal\n",
+       "4477014      normal\n",
+       "96271      abnormal\n",
+       "3525534    abnormal\n",
+       "1458482      normal\n",
+       "1257318    abnormal\n",
+       "17165        normal\n",
+       "2646177    abnormal\n",
+       "1115646    abnormal\n",
+       "1710963    abnormal\n",
+       "602093     abnormal\n",
+       "2241760    abnormal\n",
+       "878371       normal\n",
+       "4055010    abnormal\n",
+       "3317391    abnormal\n",
+       "4382267    abnormal\n",
+       "2971990    abnormal\n",
+       "2611755    abnormal\n",
+       "2228309    abnormal\n",
+       "1373807      normal\n",
+       "3478142    abnormal\n",
+       "1879194    abnormal\n",
+       "2995142    abnormal\n",
+       "3556672    abnormal\n",
+       "1284620    abnormal\n",
+       "2034844    abnormal\n",
+       "259004       normal\n",
+       "2002239    abnormal\n",
        "             ...   \n",
-       "657103     neptune.\n",
-       "2979324      smurf.\n",
-       "1473166      smurf.\n",
-       "3240331      smurf.\n",
-       "1382049      satan.\n",
-       "2615238      smurf.\n",
-       "2295337      smurf.\n",
-       "4312987      smurf.\n",
-       "3534748    neptune.\n",
-       "3044206      smurf.\n",
-       "1365493     normal.\n",
-       "1766901      smurf.\n",
-       "1427574     normal.\n",
-       "1390755     normal.\n",
-       "2003782      smurf.\n",
-       "1591269      smurf.\n",
-       "661274     neptune.\n",
-       "4747125    neptune.\n",
-       "951551       smurf.\n",
-       "1481454      smurf.\n",
-       "409789      normal.\n",
-       "2379280      smurf.\n",
-       "3484033    neptune.\n",
-       "1302003      smurf.\n",
-       "2723549      smurf.\n",
-       "425761       smurf.\n",
-       "4029777      smurf.\n",
-       "1818117      smurf.\n",
-       "2086292      smurf.\n",
-       "3487301    neptune.\n",
-       "Name: 41, Length: 979687, dtype: object"
+       "3329289    abnormal\n",
+       "4668302    abnormal\n",
+       "4064029    abnormal\n",
+       "2327283    abnormal\n",
+       "556209     abnormal\n",
+       "1419224      normal\n",
+       "4087907    abnormal\n",
+       "441170     abnormal\n",
+       "4065728    abnormal\n",
+       "3743151    abnormal\n",
+       "3491838    abnormal\n",
+       "532165     abnormal\n",
+       "2527987    abnormal\n",
+       "4527056      normal\n",
+       "2951283    abnormal\n",
+       "3107661    abnormal\n",
+       "606745     abnormal\n",
+       "887633       normal\n",
+       "3046886    abnormal\n",
+       "4735681    abnormal\n",
+       "2701626    abnormal\n",
+       "3316312    abnormal\n",
+       "310744       normal\n",
+       "2832983    abnormal\n",
+       "374564       normal\n",
+       "2219731    abnormal\n",
+       "2249467    abnormal\n",
+       "2215104    abnormal\n",
+       "1484405    abnormal\n",
+       "4500015      normal\n",
+       "Name: 41, Length: 3918744, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_y"
+    "train_y"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preprocessing\n",
-    "Transfer the label into representative numbers. Here we need the support from SkLearn library."
+    "## Data Encoding\n",
+    "Transfer the features and label into representative numbers. Here we need the support from SkLearn library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.00\n",
-      "back.\n",
-      "buffer_overflow.\n",
-      "ftp_write.\n",
-      "guess_passwd.\n",
-      "imap.\n",
-      "ipsweep.\n",
-      "land.\n",
-      "loadmodule.\n",
-      "multihop.\n",
-      "neptune.\n",
-      "nmap.\n",
-      "normal.\n",
-      "perl.\n",
-      "phf.\n",
-      "pod.\n",
-      "portsweep.\n",
-      "rootkit.\n",
-      "satan.\n",
-      "smurf.\n",
-      "teardrop.\n",
-      "warezclient.\n",
-      "warezmaster.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import preprocessing\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "le.fit(train_y)\n",
-    "i = 0\n",
-    "for i in le.classes_:\n",
-    "    print(i)"
+    "le = preprocessing.LabelEncoder()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "le.fit(train_y)\n",
+    "train_y = le.transform(le.classes_)\n",
+    "\n",
+    "#Put the new assigned data to the new array\n",
+    "#new_classes = le.classes_\n",
+    "\n",
+    "#le.inverse_transform(train_y)\n",
+    "# Encode the new_classes array which only contains two classes\n",
+    "#le.fit(new_classes)\n",
+    "#train_y = le.transform(new_classes)\n",
+    "#train_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1956,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-3f4df89908cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_estimators\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-13-1ce3c5b84097>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_estimators\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/sklearn/ensemble/forest.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    248\u001b[0m         \u001b[0;31m# Validate or convert input data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 249\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"csc\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    494\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    495\u001b[0m                 \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimplefilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 496\u001b[0;31m                 \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    497\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    498\u001b[0m                 raise ValueError(\"Complex data not supported\\n\"\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m     \"\"\"\n\u001b[0;32m--> 538\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
