Add a python code

--- a/Benchmark/KDD99_benchmark.ipynb
+++ b/Benchmark/KDD99_benchmark.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "dataset = pd.read_csv(data_path, sep=',', usecols=range(0, 42))\n",
     "\n",
-    "dataset.shape"
+    "print(\"Dataset Shape:\", dataset.shape)"
    ]
   },
   {
@@ -2017,50 +2017,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(395216, 41)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_x.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Categorize the attack type into two classes: normal and abnormal. Here, we only detect the malicious network traffic. The pre-defined array of new class is ready for the replacement. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(395216,)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y.shape"
    ]
   },
   {
@@ -2075,87 +2035,6 @@
     "            'smurf':'abnormal', 'spy':'abnormal', 'teardrop':'abnormal', 'warezclient':'abnormal', 'warezmaster':'abnormal'}\n",
     "train_y = train_y.replace(new_class)\n",
     "test_y = test_y.replace(new_class)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "43074     abnormal\n",
-       "315411    abnormal\n",
-       "328306    abnormal\n",
-       "350016    abnormal\n",
-       "288080    abnormal\n",
-       "444286    abnormal\n",
-       "331602    abnormal\n",
-       "268415    abnormal\n",
-       "447612    abnormal\n",
-       "72726     abnormal\n",
-       "447247    abnormal\n",
-       "10166     abnormal\n",
-       "389439    abnormal\n",
-       "340942    abnormal\n",
-       "264355    abnormal\n",
-       "386076    abnormal\n",
-       "221028    abnormal\n",
-       "35232       normal\n",
-       "464080    abnormal\n",
-       "283329    abnormal\n",
-       "399669    abnormal\n",
-       "302855    abnormal\n",
-       "124354    abnormal\n",
-       "345241      normal\n",
-       "206072    abnormal\n",
-       "67408     abnormal\n",
-       "376287    abnormal\n",
-       "138255      normal\n",
-       "142322      normal\n",
-       "452330      normal\n",
-       "            ...   \n",
-       "73402     abnormal\n",
-       "272484    abnormal\n",
-       "321112    abnormal\n",
-       "317368    abnormal\n",
-       "92552     abnormal\n",
-       "155997    abnormal\n",
-       "280684    abnormal\n",
-       "35981       normal\n",
-       "132905    abnormal\n",
-       "479330    abnormal\n",
-       "110593    abnormal\n",
-       "331135    abnormal\n",
-       "20460       normal\n",
-       "225562    abnormal\n",
-       "75578       normal\n",
-       "417812    abnormal\n",
-       "208295    abnormal\n",
-       "287411    abnormal\n",
-       "75947       normal\n",
-       "273083    abnormal\n",
-       "52363     abnormal\n",
-       "120381    abnormal\n",
-       "69318     abnormal\n",
-       "235859    abnormal\n",
-       "56763     abnormal\n",
-       "296595    abnormal\n",
-       "208543    abnormal\n",
-       "240568    abnormal\n",
-       "398352    abnormal\n",
-       "144393    abnormal\n",
-       "Name: label, Length: 395216, dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_y"
    ]
   },
   {
@@ -2432,13 +2311,6 @@
     "from sklearn.metrics import confusion_matrix\n",
     "print(confusion_matrix(prid, test_y))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
