--- a/Benchmark/KDD99_benchmark.ipynb
+++ b/Benchmark/KDD99_benchmark.ipynb
@@ -12,7 +12,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Environment SetUp\n",
+    "## Data Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment SetUp\n",
     "If the enviroment is not ready for the procedure, install all the general toolkits to the enviorment. If the enviornment is ready, skip this step."
    ]
   },
@@ -31,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## General SetUp\n",
+    "### General SetUp\n",
     "First of all, we import all the needed libraries to the kernel."
    ]
   },
@@ -61,14 +68,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(494020, 42)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Shape: (494020, 42)\n"
+     ]
     }
    ],
    "source": [
@@ -2000,7 +2004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Start the pre-training SetUp\n",
+    "### Start the pre-training SetUp\n",
     "Divide the dataset into two types, one is the collection of features (input_x) and the other is the labels (input_y). There are 41 features and 5 classes. Using Sklearn's train_test_split() to split 20% of data into testing set and the rest is assigned as training set. "
    ]
   },
@@ -2025,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,93 +2045,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Encoding\n",
+    "### Data Encoding\n",
     "Transfer the features and label into representative numbers. Here we need the support from SkLearn library."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "43074     abnormal\n",
-       "315411    abnormal\n",
-       "328306    abnormal\n",
-       "350016    abnormal\n",
-       "288080    abnormal\n",
-       "444286    abnormal\n",
-       "331602    abnormal\n",
-       "268415    abnormal\n",
-       "447612    abnormal\n",
-       "72726     abnormal\n",
-       "447247    abnormal\n",
-       "10166     abnormal\n",
-       "389439    abnormal\n",
-       "340942    abnormal\n",
-       "264355    abnormal\n",
-       "386076    abnormal\n",
-       "221028    abnormal\n",
-       "35232       normal\n",
-       "464080    abnormal\n",
-       "283329    abnormal\n",
-       "399669    abnormal\n",
-       "302855    abnormal\n",
-       "124354    abnormal\n",
-       "345241      normal\n",
-       "206072    abnormal\n",
-       "67408     abnormal\n",
-       "376287    abnormal\n",
-       "138255      normal\n",
-       "142322      normal\n",
-       "452330      normal\n",
+       "191624    abnormal\n",
+       "158604    abnormal\n",
+       "273441    abnormal\n",
+       "3965        normal\n",
+       "230332    abnormal\n",
+       "168751    abnormal\n",
+       "119548    abnormal\n",
+       "62947     abnormal\n",
+       "470749    abnormal\n",
+       "99371     abnormal\n",
+       "186449    abnormal\n",
+       "285623    abnormal\n",
+       "433661    abnormal\n",
+       "271801    abnormal\n",
+       "148805      normal\n",
+       "303535    abnormal\n",
+       "64177     abnormal\n",
+       "97389     abnormal\n",
+       "179295    abnormal\n",
+       "426232    abnormal\n",
+       "152111    abnormal\n",
+       "380971    abnormal\n",
+       "34694       normal\n",
+       "360481    abnormal\n",
+       "457950      normal\n",
+       "271144    abnormal\n",
+       "69190     abnormal\n",
+       "71752     abnormal\n",
+       "381489    abnormal\n",
+       "109462    abnormal\n",
        "            ...   \n",
-       "73402     abnormal\n",
-       "272484    abnormal\n",
-       "321112    abnormal\n",
-       "317368    abnormal\n",
-       "92552     abnormal\n",
-       "155997    abnormal\n",
-       "280684    abnormal\n",
-       "35981       normal\n",
-       "132905    abnormal\n",
-       "479330    abnormal\n",
-       "110593    abnormal\n",
-       "331135    abnormal\n",
-       "20460       normal\n",
-       "225562    abnormal\n",
-       "75578       normal\n",
-       "417812    abnormal\n",
-       "208295    abnormal\n",
-       "287411    abnormal\n",
-       "75947       normal\n",
-       "273083    abnormal\n",
-       "52363     abnormal\n",
-       "120381    abnormal\n",
-       "69318     abnormal\n",
-       "235859    abnormal\n",
-       "56763     abnormal\n",
-       "296595    abnormal\n",
-       "208543    abnormal\n",
-       "240568    abnormal\n",
-       "398352    abnormal\n",
-       "144393    abnormal\n",
+       "53601     abnormal\n",
+       "454569      normal\n",
+       "176281    abnormal\n",
+       "122618    abnormal\n",
+       "306211    abnormal\n",
+       "469626    abnormal\n",
+       "410658    abnormal\n",
+       "367076    abnormal\n",
+       "306917    abnormal\n",
+       "451969      normal\n",
+       "137936      normal\n",
+       "339343    abnormal\n",
+       "165766    abnormal\n",
+       "396915      normal\n",
+       "353466    abnormal\n",
+       "33343       normal\n",
+       "9332      abnormal\n",
+       "425180    abnormal\n",
+       "154074    abnormal\n",
+       "107789      normal\n",
+       "338896    abnormal\n",
+       "385361    abnormal\n",
+       "332367    abnormal\n",
+       "468970    abnormal\n",
+       "400614    abnormal\n",
+       "46850     abnormal\n",
+       "107631      normal\n",
+       "178454    abnormal\n",
+       "351380    abnormal\n",
+       "96357     abnormal\n",
        "Name: label, Length: 395216, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2145,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2164,7 +2167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2218,70 +2221,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Start Training with Random Forest Classifier and the evaluation "
+    "## 1. Random Forest Classifier\n",
+    "Start trainning with random forest classifier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
-       "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
-       "                       n_jobs=None, oob_score=False, random_state=None,\n",
-       "                       verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=100)\n",
     "clf.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(clf.feature_importances_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply the trained model to the testing dataset. The importance of each feature and an overall accuracy are printed. The accuracy could reach 99.97%."
+    "## 2. Support Vector Machine (SVM) Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/sklearn/svm/base.py:929: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "          intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "          multi_class='ovr', penalty='l2', random_state=0, tol=1e-05,\n",
+       "          verbose=0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "clf = LinearSVC(random_state=0, tol=1e-5)\n",
+    "clf.fit(train_x, train_y)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apply the trained model to the testing dataset, and print the accuracy and confusion matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8.14069930e-03 5.57783079e-02 3.37311292e-02 2.64779053e-02\n",
-      " 8.00037363e-02 1.14984444e-01 5.54817345e-06 3.43503093e-03\n",
-      " 1.30645485e-05 7.96096883e-03 1.04025340e-04 6.24077343e-02\n",
-      " 5.50565457e-03 5.08289516e-05 4.52703599e-06 3.44733717e-05\n",
-      " 4.17607452e-05 1.34269768e-05 1.27793815e-05 0.00000000e+00\n",
-      " 0.00000000e+00 6.95882220e-04 1.86201180e-01 4.72047767e-02\n",
-      " 8.06653232e-03 1.15849254e-02 3.66017115e-03 2.40186500e-03\n",
-      " 2.43417502e-02 2.30726825e-02 1.27678971e-02 8.32021346e-02\n",
-      " 2.61745056e-02 2.05284498e-02 2.55257688e-02 6.13595667e-02\n",
-      " 3.31967142e-02 2.15987992e-02 2.81561425e-03 3.27546269e-03\n",
-      " 3.61927588e-03]\n",
-      "Accuracy: 0.9997570948544593\n"
+      "Accuracy: 0.9895854418849439\n"
      ]
     }
    ],
    "source": [
     "prid = clf.predict(test_x)\n",
-    "print(clf.feature_importances_)\n",
     "\n",
     "print(\"Accuracy:\", clf.score(test_x, test_y))"
    ]
@@ -2295,15 +2327,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[79237     4]\n",
-      " [   20 19543]]\n"
+      "[[78921   653]\n",
+      " [  376 18854]]\n"
      ]
     }
    ],
@@ -2311,6 +2343,13 @@
     "from sklearn.metrics import confusion_matrix\n",
     "print(confusion_matrix(prid, test_y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
