Update the python files

--- a/Benchmark/KDD99_benchmark.ipynb
+++ b/Benchmark/KDD99_benchmark.ipynb
@@ -218,7 +218,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Decision Tree"
+    "## 1. Decision Tree\n",
+    "Start trainning with Decision Tree Classifier."
    ]
   },
   {
@@ -230,6 +231,13 @@
     "from sklearn import tree\n",
     "clf = tree.DecisionTreeClassifier()\n",
     "dt = clf.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Draw the decision tree by using \"graphviz\" and save the graph to png."
    ]
   },
   {
@@ -277,7 +285,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Support Vector Machine (SVM) Classifier"
+    "## 3. Support Vector Machine (SVM) Classifier\n",
+    "Start trainning with SVM classifier"
    ]
   },
   {
