--- a/Benchmark/KDD99_benchmark.ipynb
+++ b/Benchmark/KDD99_benchmark.ipynb
@@ -26,7 +26,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#! pip3 install numpy\n",
@@ -47,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -2018,7 +2022,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "input_x = dataset.iloc[:, 0:41]\n",
@@ -2037,7 +2043,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "new_class = {'back':'abnormal', 'buffer_overflow':'abnormal', 'ftp_write':'abnormal', 'guess_passwd':'abnormal', 'imap':'abnormal',\n",
@@ -2059,7 +2067,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import preprocessing"
@@ -2327,7 +2337,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fpr = dict()\n",
@@ -2446,7 +2458,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fpr = dict()\n",
@@ -2561,7 +2575,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fpr = dict()\n",
@@ -2667,7 +2683,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fpr = dict()\n",
@@ -2773,7 +2791,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fpr = dict()\n",
@@ -2850,8 +2870,8 @@
     "start_time = time.time()\n",
     "clf = LogisticRegression(random_state=0, solver='lbfgs', multi_class='multinomial')\n",
     "clf.fit(train_x, train_y)\n",
-    "rtime_NN = time.time() - start_time\n",
-    "print(rtime_NN)"
+    "rtime_LR = time.time() - start_time\n",
+    "print(rtime_LR)"
    ]
   },
   {
@@ -2974,7 +2994,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tensorflow as tf"
