--- a/notebook/Device_Identification.ipynb
+++ b/notebook/Device_Identification.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "import torch.nn as nn\n",
+    "from Functions import *"
+   ]
   },
   {
    "cell_type": "code",
@@ -16,78 +18,41 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load all the data from the CSV file \n",
+    "PT_DATA_PATH = \"../../../Dataset/Botnet_Detection/PT_838_Security Camera\"\n",
+    "PT2_DATA_PATH = \"../../../Dataset/Botnet_Detection/PT737E_Security Camera\"\n",
+    "XC_DATA_PATH = \"../../../Dataset/Botnet_Detection/XCS7_1002_WHT_Security_Camera\"\n",
+    "#BM_DATA_PATH = \"../../../Dataset/Botnet_Detection/Philips_B120N10_Baby_Monitor\"\n",
+    "df_pt_1 = pd.read_csv(PT_DATA_PATH+\"/benign_traffic.csv\")\n",
+    "df_pt_2 = pd.read_csv(PT2_DATA_PATH+\"/benign_traffic.csv\")\n",
+    "df_xc =  pd.read_csv(XC_DATA_PATH+\"/benign_traffic.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def shuffler(df):\n",
-    "  return df.reindex(np.random.permutation(df.index))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load all the data from the CSV file \n",
-    "PT_DATA_PATH = \"../../../Dataset/Botnet_Detection/PT_838_Security Camera\"\n",
-    "XC_DATA_PATH = \"../../../Dataset/Botnet_Detection/XCS7_1002_WHT_Security_Camera\"\n",
-    "df_pt = pd.read_csv(PT_DATA_PATH+\"/benign_traffic.csv\")\n",
-    "df_xc = pd.read_csv(XC_DATA_PATH+\"/benign_traffic.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df_pt = df_pt.assign(label = 'pt')\n",
+    "df_p1 = df_pt_1.assign(label = 'pt1')\n",
+    "df_pt2 = df_pt_2.assign(label = 'pt2')\n",
     "df_xc = df_xc.assign(label = 'xc')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_all = df_pt\n",
-    "df_all = df_all.append(df_xc, ignore_index = True)"
+    "df_all = df_p1\n",
+    "df_all = df_all.append(df_pt2, ignore_index = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -106,29 +71,32 @@
    "source": [
     "#Divide dataframe into x and y\n",
     "df_x = pd.DataFrame(df_all.iloc[:, 0:115])\n",
-    "df_y = pd.DataFrame(df_all.iloc[:, 115])"
+    "df_y = pd.DataFrame(df_all.iloc[:, 115])\n",
+    "df_xc_x = pd.DataFrame(df_xc.iloc[:, 0:115])\n",
+    "df_xc_y = pd.DataFrame(df_xc.iloc[:, 115])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Normalize the x dataframe\n",
-    "df_x = normalize(df_x)"
+    "df_x = normalize(df_x)\n",
+    "df_xc = normalize(df_xc_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array(['pt', 'xc'], dtype=object)]\n"
+      "[array(['pt1', 'pt2'], dtype=object)]\n"
      ]
     }
    ],
@@ -139,22 +107,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[0., 1.],\n",
-       "       [0., 1.],\n",
+       "       [1., 0.],\n",
        "       [1., 0.],\n",
        "       ...,\n",
        "       [1., 0.],\n",
        "       [1., 0.],\n",
-       "       [1., 0.]])"
+       "       [0., 1.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,19 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "train_x, test_x, train_y, test_y = train_test_split(df_x, df_y, test_size=0.20)"
+    "train_x, test_x, train_y, test_y = train_test_split(df_x, df_y, test_size=0.40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -207,21 +175,42 @@
     "train_x = torch.FloatTensor(train_x.values.astype(np.float32))\n",
     "test_x = torch.tensor(test_x.values.astype(np.float32))\n",
     "train_y = torch.tensor(train_y.astype(np.float32))\n",
-    "test_y = torch.tensor(test_y.astype(np.float32))"
+    "test_y = torch.tensor(test_y.astype(np.float32))\n",
+    "xc_x = torch.tensor(df_xc.values.astype(np.float32))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([116079, 115])"
+       "torch.Size([46585, 115])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xc_x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([96400, 115])"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([29020, 115])"
+       "torch.Size([64268, 115])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([29020, 2])"
+       "torch.Size([64268, 2])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,16 +261,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.1194), tensor(0.1794))"
+       "(tensor(0.1402), tensor(0.2044))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -307,10 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = Net(input_dim, h_dim, output_dim)\n",
@@ -320,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -331,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -340,7 +327,6 @@
     "def training(epochs, model, train_data, labels, vali_data, target):\n",
     "    for e in range(int(epochs)):\n",
     "        y_pred = model(train_data)\n",
-    "\n",
     "        # Compute and print loss\n",
     "        loss = criterion(y_pred, labels)\n",
     "        if e % 100 == 99:\n",
@@ -363,42 +349,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "99 Loss: 1730.869873046875\n",
-      "BM Accuracy: 99.5693\n",
-      "199 Loss: 1681.443115234375\n",
-      "BM Accuracy: 99.5865\n",
-      "299 Loss: 1632.770751953125\n",
-      "BM Accuracy: 99.5968\n",
-      "399 Loss: 1592.5736083984375\n",
-      "BM Accuracy: 99.6313\n",
-      "499 Loss: 1539.232177734375\n",
-      "BM Accuracy: 99.6347\n",
-      "599 Loss: 1490.8829345703125\n",
-      "BM Accuracy: 99.6416\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "training(epochs, model, train_x, train_y, test_x, test_y) ## Train the initial model on Server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def computer():\n",
-    "    "
+    "def maxind(V, r):\n",
+    "    res=[]\n",
+    "    for row in V:\n",
+    "        l2 = np.linalg.norm(row)\n",
+    "        row = row.unsqueeze(1)\n",
+    "        row = torch.transpose(row,0,1)       \n",
+    "        row = row.squeeze(0)\n",
+    "        r = r.squeeze(0)\n",
+    "        inner = float(torch.dot(row, r))\n",
+    "        s = float(inner/l2)\n",
+    "        res.append(s)\n",
+    "        res_tensor = torch.FloatTensor(res)\n",
+    "    \n",
+    "    _, i = torch.max(res_tensor, 0)\n",
+    "    return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.FloatTensor([[1,2,3],[4,5,6],[7,8,9],[1,0,2],[2,0,0]])\n",
+    "b = torch.FloatTensor([[1,0,1]])\n",
+    "b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = torch.cat([a,b], 0)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxind(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Note: The vector(row) picked from the matrix cannot be re-sized directly.\n",
+    "## y is expected as 2D matrix\n",
+    "def OMP(y, V, sl, ep):\n",
+    "    c_encode = torch.zeros([1, len(V)], dtype=torch.float32)\n",
+    "    s_index = []\n",
+    "    r = y\n",
+    "    k = 1\n",
+    "    while (k <= sl) and (np.linalg.norm(r) >= ep):\n",
+    "        i = int(maxind(V, r))\n",
+    "        s_index.append(i)\n",
+    "        temp = []\n",
+    "        for sk in s_index:\n",
+    "            temp_v = V[sk]\n",
+    "            if len(temp)==0:\n",
+    "                temp=temp_v\n",
+    "                temp = temp.unsqueeze(0)\n",
+    "            else:\n",
+    "                temp_v = V[sk].unsqueeze(0)\n",
+    "                temp = torch.cat((temp, temp_v),0)\n",
+    "               \n",
+    "        \n",
+    "        s_matrix = temp\n",
+    "        s_matrix = s_matrix.type(torch.FloatTensor)\n",
+    "        s_i = torch.pinverse(s_matrix)\n",
+    "        c = torch.mm(y, s_i)\n",
+    "        r = y - torch.mm(c, s_matrix)\n",
+    "        k = k+1\n",
+    "    \n",
+    "    print(s_index)\n",
+    "    v=0\n",
+    "    for sk in s_index:\n",
+    "        c_encode[0][sk] = c[0][v]\n",
+    "        v = v+1\n",
+    "    return c_encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OMP(b, a, 20, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xc_y = xc_x[90][:].unsqueeze(0)\n",
+    "pt_y = test_x[90][:].unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[134, 174, 112, 38, 128, 160, 63, 121, 116, 128]\n",
+      "[182, 33, 145, 93, 101, 160, 3, 194, 64, 63]\n",
+      "tensor([[ 0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  7.4779e-01,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  2.5493e-01,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  2.5236e-01,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  5.1462e-02,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  1.9228e-01,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  3.2313e+05,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00, -9.4600e-01,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          1.9322e-01,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  2.3556e-02,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+      "          0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00]])\n",
+      "tensor([[ 0.0000,  0.0000,  0.0000,  0.3037,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0735,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.5189,\n",
+      "         -0.0042,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.2300,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0128,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000, -1.5601,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.1372,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.1557,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.1069,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "c_xc = OMP(xc_y, train_x[:200][:], 10, 0.001)\n",
+    "c_pt = OMP(pt_y, train_x[:200][:], 10, 0.001)\n",
+    "print(c_xc)\n",
+    "print(c_pt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "655061.8\n",
+      "0.22126769\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_xc = xc_y - torch.mm(c_xc, train_x[:200][:])\n",
+    "t_pt = pt_y - torch.mm(c_pt, train_x[:200][:])\n",
+    "print(np.linalg.norm(t_xc))\n",
+    "print(np.linalg.norm(t_pt))"
    ]
   },
   {
@@ -408,14 +584,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def OMP(y, V, sl=10, ep=0.001):\n",
-    "    support_set = []\n",
-    "    k = 1\n",
-    "    while k<= sl or np.linalg.norm(y) <= ep:\n",
-    "        _, i = torch.max()\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
